feat: 触宝两轮面试

--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -21,6 +21,8 @@
   - [海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递](#海康威视-三个志愿杭州南京上海-2020821投递)
   - [恒生电子 杭州 2020/8/21投递](#恒生电子-杭州-2020821投递)
   - [上海触宝 2020/8/21投递](#上海触宝-2020821投递)
+    - [一面 2020/9/12](#一面-2020912)
+    - [二面 2020/9/12](#二面-2020912)
   - [上海东方财富 2020/8/21投递](#上海东方财富-2020821投递)
   - [南京焦点科技 2020/8/21投递](#南京焦点科技-2020821投递)
     - [一面 2020/9/1](#一面-202091-1)
@@ -58,9 +60,9 @@
         if (arr[mid] === target) {
             return true;
         } else if (arr[mid] < target) {
-            return find(arr.slice(mid + 1, target))
+            return binarySearch(arr.slice(mid + 1), target)
         } else {
-            return find(arr.slice(0, mid), target)
+            return binarySearch(arr.slice(0, mid), target)
         }
     }
     // 快排
@@ -583,6 +585,85 @@
 ## 上海触宝 2020/8/21投递
 
 > 笔试时间 2020/8/25
+
+### 一面 2020/9/12
+
+> 太尴尬了，一面面试官是我实习的时候的面试官，结果人家还记得我，然后我实习的时候offer拿了没去，找的理由是导师不让，结果面试官看着我简历上的实习经历沉默了，好尴尬呀，然后面试全程看着我笑 囧，从来没这么尴尬的面试过
+
+1. 项目
+2. 浏览器缓存
+3. wepack优化
+4. 1000个div每个都要绑定事件怎么实现
+5. 移动端适配的方法
+6. 事件委托的优势是什么
+7. 异步实现的方式
+8. promise原理是什么样的
+9. 代码题1
+
+    ```txt
+    数组中只出现一次的数字
+    限定语言：Javascript_V8、Python、C++、Javascript、Php、C#、Java
+    一个整型数组里除了两个数字之外，其他的数字都出现了两次。请写程序找出这两个只出现一次的数字。
+    ```
+
+    ```js
+    function FindNumsAppearOnce(array)
+    {
+        let res = [];
+        array.forEach(item => {
+            if (array.indexOf(item) === array.lastIndexOf(item)) {
+                res.push(item);
+            }
+        })
+        return res;
+    }
+    ```
+
+10. 代码题2
+
+    ```txt
+    给定一个数组和滑动窗口的大小，找出所有滑动窗口里数值的最大值。例如，如果输入数组{2,3,4,2,6,2,5,1}及滑动窗口的大小3，那么一共存在6个滑动窗口，他们的最大值分别为{4,4,6,6,6,5}； 针对数组{2,3,4,2,6,2,5,1}的滑动窗口有以下6个： {[2,3,4],2,6,2,5,1}， {2,[3,4,2],6,2,5,1}， {2,3,[4,2,6],2,5,1}， {2,3,4,[2,6,2],5,1}， {2,3,4,2,[6,2,5],1}， {2,3,4,2,6,[2,5,1]}。
+    ```
+
+    ```js
+    function maxInWindows(num, size)
+    {
+        // write code here
+        if (size === 0) return []
+        let [i ,j] = [0, size-1];
+        let res = [];
+        while(j < num.length) {
+            res.push(Math.max(...num.slice(i, j+1)));
+            i++;
+            j++;
+        }
+        return res;
+    }
+    ```
+
+### 二面 2020/9/12
+
+1. 自我介绍
+2. 项目
+3. 数据结构了解哪些
+4. HTTP相关的字段
+5. HTTP与HTTPS的区别
+6. HTTPS怎么确认网站的证书是来自正确的服务器呢
+7. TCP三次握手，二次握手行不行
+8. 浏览器输入URL之后发生了什么
+9. DNS解析的过程
+10. 一个网页点击是如何监听的
+11. 跨域，同源策略限制是什么，是浏览器的限制吗，跨域的方法
+
+    同源策略是浏览器对js脚本的限制，也就是说是浏览器的一个标准
+
+12. MVVM原理
+13. MVVM和MVC的区别
+14. Vue双向数据绑定原理
+15. Object.defineProperty和Proxy的区别是啥
+16. 你觉得后端是什么，为什么要前后端分离，这样有什么好处呢
+17. 有什么事件让你受挫过
+18. 反问
 
 ## 上海东方财富 2020/8/21投递
 
