--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -4,6 +4,7 @@
   - [上海腾讯 PCG 腾讯视频 2020/8/19投递](#上海腾讯-pcg-腾讯视频-2020819投递)
     - [一面 2020/9/9](#一面-202099)
     - [二面 2020/9/10](#二面-2020910)
+    - [三面 2020/9/13](#三面-2020913)
   - [上海字节 Data部门 广告部门](#上海字节-data部门-广告部门)
     - [一面 2020/8/27](#一面-2020827)
     - [二面 2020/8/28](#二面-2020828)
@@ -166,6 +167,23 @@
 8. 反问
 
     - 业务 主要是做企点（营销QQ 企业QQ） qidian.qq.com
+
+### 三面 2020/9/13
+
+1. 项目介绍
+2. webpack优化方法
+3. 不同页面之间如何通信
+4. cookie localStorage SessionStorage的区别
+5. TCP三次握手,SYN同步序列是怎么产生的,能设置相同的吗
+6. HTTPS建立连接的过程
+7. vue双向数据绑定
+8. iframe除了不利于SEO,还有什么缺点
+9. CSRF的原理以及防御机制
+10. 对第一份工作地点的看法以及你现在手头已经拿了哪些家的意向书
+11. 反问
+
+    - 部门业务情况: 属于腾讯云旗下,主要是一些toB的业务,比如内部系统,服务于营销 客服这类人
+    - toC的业务情况
 
 ## 上海字节 Data部门 广告部门
 
@@ -653,17 +671,18 @@
 8. 浏览器输入URL之后发生了什么
 9. DNS解析的过程
 10. 一个网页点击是如何监听的
-11. 跨域，同源策略限制是什么，是浏览器的限制吗，跨域的方法
+11. 前端持久化保存的方法
+12. 跨域，同源策略限制是什么，是浏览器的限制吗，跨域的方法
 
     同源策略是浏览器对js脚本的限制，也就是说是浏览器的一个标准
 
-12. MVVM原理
-13. MVVM和MVC的区别
-14. Vue双向数据绑定原理
-15. Object.defineProperty和Proxy的区别是啥
-16. 你觉得后端是什么，为什么要前后端分离，这样有什么好处呢
-17. 有什么事件让你受挫过
-18. 反问
+13. MVVM原理
+14. MVVM和MVC的区别
+15. Vue双向数据绑定原理
+16. Object.defineProperty和Proxy的区别是啥
+17. 你觉得后端是什么，为什么要前后端分离，这样有什么好处呢
+18. 有什么事件让你受挫过
+19. 反问
 
 ## 上海东方财富 2020/8/21投递
 
