--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -33,6 +33,7 @@
   - [网易互联网 网易严选/网易有道 2020/8/29投递](#网易互联网-网易严选网易有道-2020829投递)
   - [杭州滴滴 CTO线 2020/8/29投递（内推）](#杭州滴滴-cto线-2020829投递内推)
   - [南京小米 2020/8/31（内推）](#南京小米-2020831内推)
+    - [一面 2020/9/14](#一面-2020914)
   - [百度(上海) 2020/9/3投递](#百度上海-202093投递)
   - [快手(上海) 2020/9/6投递](#快手上海-202096投递)
 
@@ -869,12 +870,33 @@
 
 ## 网易互联网 网易严选/网易有道 2020/8/29投递
 
+> 笔试 2020/9/12
+
 ## 杭州滴滴 CTO线 2020/8/29投递（内推）
+
+> 笔试 2020/9/13
 
 ## 南京小米 2020/8/31（内推）
 
 > 2020/9/6 笔试
 
+### 一面 2020/9/14
+
+1. 三列布局，左右固定中间自适应
+2. 上下两个div，每个div的margin为20px，问两个div之间的间距
+3. 相邻兄弟选择器
+4. js如何改变函数作用域
+5. 判断是否是数组的方式
+6. Event Loop
+7. Vue v-model的原理
+8. 手写一个节流函数
+9. 反问
+
+    - 部门情况： 互联网散步 信息流浏览器 主要是c端，运营后台
+    - 前端规模 南京7个 北京4个
+
 ## 百度(上海) 2020/9/3投递
+
+> 笔试 2020/9/14
 
 ## 快手(上海) 2020/9/6投递
