feat: 东方财富一面

--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -25,6 +25,7 @@
     - [一面 2020/9/12](#一面-2020912)
     - [二面 2020/9/12](#二面-2020912)
   - [上海东方财富 2020/8/21投递](#上海东方财富-2020821投递)
+    - [一面 2020/9/14](#一面-2020914)
   - [南京焦点科技 2020/8/21投递](#南京焦点科技-2020821投递)
     - [一面 2020/9/1](#一面-202091-1)
   - [shopee 2020/8/25投递](#shopee-2020825投递)
@@ -33,7 +34,7 @@
   - [网易互联网 网易严选/网易有道 2020/8/29投递](#网易互联网-网易严选网易有道-2020829投递)
   - [杭州滴滴 CTO线 2020/8/29投递（内推）](#杭州滴滴-cto线-2020829投递内推)
   - [南京小米 2020/8/31（内推）](#南京小米-2020831内推)
-    - [一面 2020/9/14](#一面-2020914)
+    - [一面 2020/9/14](#一面-2020914-1)
   - [百度(上海) 2020/9/3投递](#百度上海-202093投递)
   - [快手(上海) 2020/9/6投递](#快手上海-202096投递)
 
@@ -689,6 +690,75 @@
 
 > 2020/8/29 笔试
 
+### 一面 2020/9/14
+
+1. quertSelectorAll返回的是一个什么（NodeList对象）
+2. 冒泡的原理
+3. position值为absolute和fixed的区别
+4. 文本单行居中，多行居左
+
+    ```html
+    div {
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+    }
+
+    <div>
+        标题内容，这里自己添加文本成多行，
+    </div>
+    ```
+
+5. 面向对象的特点，js是面向对象的吗
+
+    抽象、继承、多态
+
+6. 说一下js的继承
+7. 判断数组的方式
+8. 分析输出
+
+    ```js
+    var foo = {
+        bar: 1,
+        print: function() {
+            console.log(this.bar)
+        }
+    }
+    var print = foo.print;
+    print(); // undefined
+    ```
+
+9. forEach和map的区别
+10. Vue 双向数据绑定
+11. Vue key的作用
+12. proxy解决了什么问题
+13. git stash 是干嘛的
+
+    命令可用于临时保存和回复修改，可跨分支。
+
+14. git checkout有什么作用
+15. 手写代码
+
+    ```js
+    let data = [
+        {'math': 99, 'english': 98, 'chinese': 88},
+        {'math': 89, 'english': 88, 'chinese': 78},
+        {'math': 79, 'english': 78, 'chinese': 68}
+    ]
+
+    类似这样的一个数组，给定一个字段，按照其进行排序
+
+    function solution(data, param) {
+        return data.sort((a, b) => a[param] - b[param]);
+    }
+    ```
+
+16. 反问
+
+    - 部门情况: 证券事业部，主要是做东财APP模块的 React Native，偏移动端
+    - 前端规模 证券事业部30人
+    - 面试流程 总共三轮，hr面+高管面
+
 ## 南京焦点科技 2020/8/21投递
 
 > 无笔试
@@ -888,9 +958,10 @@
 4. js如何改变函数作用域
 5. 判断是否是数组的方式
 6. Event Loop
-7. Vue v-model的原理
-8. 手写一个节流函数
-9. 反问
+7. http和https的区别
+8. Vue v-model的原理
+9. 手写一个节流函数
+10. 反问
 
     - 部门情况： 互联网散步 信息流浏览器 主要是c端，运营后台
     - 前端规模 南京7个 北京4个
