--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -20,21 +20,26 @@
     - [二面 2020/9/9](#二面-202099)
     - [三面 主管面 2020/9/9](#三面-主管面-202099)
   - [海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递](#海康威视-三个志愿杭州南京上海-2020821投递)
+    - [一面 电话 2020/9/15](#一面-电话-2020915)
   - [恒生电子 杭州 2020/8/21投递](#恒生电子-杭州-2020821投递)
   - [上海触宝 2020/8/21投递](#上海触宝-2020821投递)
     - [一面 2020/9/12](#一面-2020912)
     - [二面 2020/9/12](#二面-2020912)
   - [上海东方财富 2020/8/21投递](#上海东方财富-2020821投递)
     - [一面 2020/9/14](#一面-2020914)
+    - [HR面 2020/9/15](#hr面-2020915)
   - [南京焦点科技 2020/8/21投递](#南京焦点科技-2020821投递)
     - [一面 2020/9/1](#一面-202091-1)
   - [shopee 2020/8/25投递](#shopee-2020825投递)
     - [一面 2020/9/11](#一面-2020911)
+    - [二面 2020/9/18](#二面-2020918)
   - [美团 到店事业群-广告事业部 2020/8/29投递](#美团-到店事业群-广告事业部-2020829投递)
   - [网易互联网 网易严选/网易有道 2020/8/29投递](#网易互联网-网易严选网易有道-2020829投递)
+    - [一面 2020/9/16](#一面-2020916)
   - [杭州滴滴 CTO线 2020/8/29投递（内推）](#杭州滴滴-cto线-2020829投递内推)
   - [南京小米 2020/8/31（内推）](#南京小米-2020831内推)
     - [一面 2020/9/14](#一面-2020914-1)
+    - [二面 2020/9/15](#二面-2020915)
   - [百度(上海) 2020/9/3投递](#百度上海-202093投递)
   - [快手(上海) 2020/9/6投递](#快手上海-202096投递)
 
@@ -600,6 +605,23 @@
 
 > 2020/8/28 笔试
 
+### 一面 电话 2020/9/15
+
+1. 自我介绍
+2. 介绍项目，深挖项目，挖了20分钟！！！
+3. websocket有用到吗，没有，然后给我的项目提了个bug
+4. 详细问我一个项目的流程，需求分析，技术评审...
+5. 需求评审都有谁，技术评审用的啥...
+6. 遇到问题怎么解决，两天自己解决问题，两个小时问导师/主管解决，你选啥？what？？？
+7. 如果接口挂了，前端有做什么处理吗
+8. 设计模式了解哪些，项目中有用到么
+9. 怎么学习前端的，看过哪些书籍使用过哪些网站
+10. 说说vue你觉得哪里掌握的不错，哪些用的比较少
+11. 反问
+
+    - 流程 电话面+技术面
+    - 业务 主要是B端的，具体部门进去安排
+
 ## 恒生电子 杭州 2020/8/21投递
 
 ## 上海触宝 2020/8/21投递
@@ -758,6 +780,8 @@
     - 部门情况: 证券事业部，主要是做东财APP模块的 React Native，偏移动端
     - 前端规模 证券事业部30人
     - 面试流程 总共三轮，hr面+高管面
+
+### HR面 2020/9/15
 
 ## 南京焦点科技 2020/8/21投递
 
@@ -934,6 +958,8 @@
 
     部门业务，前端规模
 
+### 二面 2020/9/18
+
 ## 美团 到店事业群-广告事业部 2020/8/29投递
 
 > 2020/9/6 笔试
@@ -941,6 +967,8 @@
 ## 网易互联网 网易严选/网易有道 2020/8/29投递
 
 > 笔试 2020/9/12
+
+### 一面 2020/9/16
 
 ## 杭州滴滴 CTO线 2020/8/29投递（内推）
 
@@ -965,6 +993,48 @@
 
     - 部门情况： 互联网散步 信息流浏览器 主要是c端，运营后台
     - 前端规模 南京7个 北京4个
+
+### 二面 2020/9/15
+
+1. 自我介绍
+2. 左边固定，右边自适应布局
+3. 水平垂直居中如何实现
+4. 事件循环
+5. 写代码：
+
+    ```js
+    // 下楼梯：
+    // 共n层，每次可以下1层或两层，共有多少种方式
+
+    function fiber(n) {
+        let dp = [0, 1, 2];
+        for(let i=3; i<=n; i++) {
+            dp[i] = dp[i-1] + dp[i-2];
+        }
+        return dp[n];
+    }
+
+    function fiber(n) {
+        if (n === 1 || n === 2) return n;
+        return fiber(n-1) + fiber(n-2);
+    }
+    ```
+
+6. 挑一个你觉得有成就的项目讲讲
+7. 组件canvas画一个图，当浏览器resize的时候如何确保这个canvas图跟着变化
+8. 如何刷新一个组件
+9. vue key的作用，那你觉得key能单独使用么，组件能使用key么，那key值设为什么
+10. 项目优化，代码优化
+11. Event Loop
+12. 知道哪些数据结构
+13. 你知道这些数据结构的应用场景么
+14. 知道哪些设计模式
+15. 移动端设配的方式
+16. 画一个1px的线有哪些方法
+17. 为什么学习前端
+18. 学习前端的方式
+19. 你的优缺点
+20. 你的职业规划
 
 ## 百度(上海) 2020/9/3投递
 
