--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -45,7 +45,7 @@
 
 ## 上海腾讯 PCG 腾讯视频 2020/8/19投递
 
-> 笔试时间 2020/8/23 腾讯视频莫名挂了，被CSIG捞起来了
+> 笔试时间 2020/8/23 腾讯视频莫名挂了，被CSIG捞起来了，9.15提前批最后一天，9.16号状态变灰，刷了波KPI :）
 
 ### 一面 2020/9/9
 
@@ -1030,11 +1030,13 @@
 13. 你知道这些数据结构的应用场景么
 14. 知道哪些设计模式
 15. 移动端设配的方式
-16. 画一个1px的线有哪些方法
-17. 为什么学习前端
-18. 学习前端的方式
-19. 你的优缺点
-20. 你的职业规划
+16. viewport的原理你知道么
+17. 画一个1px的线有哪些方法
+18. webpack优化或者前端优化的方法
+19. 为什么学习前端
+20. 学习前端的方式
+21. 你的优缺点
+22. 你的职业规划
 
 ## 百度(上海) 2020/9/3投递
 
