--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -970,6 +970,18 @@
 
 ### 一面 2020/9/16
 
+1. 自我介绍，重点讲讲实习项目，以及难点
+2. 滚动条不兼容具体说说是怎么解决的
+3. 有把解决的方案共享到公司吗，有写过公用的组件么
+4. 项目优化
+5. vue3和vue2的区别
+6. webpack打包原理
+7. 项目用了哪些loader
+8. style-loader的处理过程
+9. 熟悉哪些前端的库
+10. 说说FastClick库的原理
+11. 写一下这个原理的伪代码 what？？？
+
 ## 杭州滴滴 CTO线 2020/8/29投递（内推）
 
 > 笔试 2020/9/13
