feat: 东方财富二面

--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -27,6 +27,7 @@
     - [二面 2020/9/12](#二面-2020912)
   - [上海东方财富 2020/8/21投递](#上海东方财富-2020821投递)
     - [一面 2020/9/14](#一面-2020914)
+    - [二面 HR面 2020/9/16](#二面-hr面-2020916)
     - [HR面 2020/9/15](#hr面-2020915)
   - [南京焦点科技 2020/8/21投递](#南京焦点科技-2020821投递)
     - [一面 2020/9/1](#一面-202091-1)
@@ -780,6 +781,17 @@
     - 部门情况: 证券事业部，主要是做东财APP模块的 React Native，偏移动端
     - 前端规模 证券事业部30人
     - 面试流程 总共三轮，hr面+高管面
+
+### 二面 HR面 2020/9/16
+
+1. 说说你的本科经历
+2. 为什么选择考研
+3. 你还有其他家的offer吗
+4. 你对于offer选择有什么想法
+5. 反问
+
+    - 流程 后续还有一轮技术面
+    - 业务 资讯类 代销 基金 证券 东财APP
 
 ### HR面 2020/9/15
 
