--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -21,6 +21,7 @@
     - [三面 主管面 2020/9/9](#三面-主管面-202099)
   - [海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递](#海康威视-三个志愿杭州南京上海-2020821投递)
     - [一面 电话 2020/9/15](#一面-电话-2020915)
+    - [二面](#二面)
   - [恒生电子 杭州 2020/8/21投递](#恒生电子-杭州-2020821投递)
   - [上海触宝 2020/8/21投递](#上海触宝-2020821投递)
     - [一面 2020/9/12](#一面-2020912)
@@ -621,6 +622,10 @@
 
     - 流程 电话面+技术面
     - 业务 主要是B端的，具体部门进去安排
+
+### 二面
+
+> 让在钉钉群里候着，结果候了两个小时，体验感太差，不面了
 
 ## 恒生电子 杭州 2020/8/21投递
 
