--- a/09.面试复盘/智力题.md
+++ b/09.面试复盘/智力题.md
@@ -9,3 +9,7 @@ A从两头烧，B从一头烧。当A烧完时，将B熄灭。再将B从两头烧
 1. 容器A是60L，容器B是50L，A装满倒入B，A还剩10L，B倒空，将10L倒入B
 2. A倒满，倒入B，A还剩下20L，B倒空，将20L倒入B
 3. A倒满，倒入B，A还剩下30L，完成
+
+## 一天24小时，时针和分针会重合多少次
+
+22次
