--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -974,6 +974,21 @@
 
 ### 二面 2020/9/18
 
+> 二面吧，体验感超级棒，一方面吧，面试官面了一天了，确实累，也就问了一个问题就没再问，另一方面吧，没问问题之后我俩就开始闲聊了，轻松愉快。
+> 面试官也是很有意思的人，从他说话就能感觉他是一个很好相处的人
+
+1. 自我介绍
+2. 项目简介
+3. vue双向数据绑定原理
+4. getter的作用，在getter里面做什么
+5. nodejs是单线程还是多线程
+6. 单线程的优势
+7. 反问
+
+    - 不用写代码嘛？答:你要是写我可以给你来几道。我：不了不了
+    - 那我问点能闲聊的吧，你在shopee呆了多久了。答：3年多了，前20名员工。我：元老级员工
+    - 都说现在前端的技术发展非常快，你有什么可以推荐我去了解学习一下的吗？答：这你可就问对人了，然后给我讲了20min，很有深度值得思考
+
 ## 美团 到店事业群-广告事业部 2020/8/29投递
 
 > 2020/9/6 笔试
