--- a/01.浏览器/浏览器.md
+++ b/01.浏览器/浏览器.md
@@ -1,6 +1,8 @@
 # 浏览器
 
 - [浏览器](#浏览器)
+  - [OSI七层与TCP/IP五层模型](#osi七层与tcpip五层模型)
+  - [应用层有哪些协议，哪些是TCP协议，哪些是UDP协议](#应用层有哪些协议哪些是tcp协议哪些是udp协议)
   - [HTTP 状态码](#http-状态码)
   - [HTTP 与 HTTPS 的区别](#http-与-https-的区别)
   - [HTTPS 协议的工作原理](#https-协议的工作原理)
@@ -30,6 +32,39 @@
     - [Etag 和 If-None-Match](#etag-和-if-none-match)
     - [Last-Modify / If-Modify-Since](#last-modify--if-modify-since)
     - [为什么要有 Etag](#为什么要有-etag)
+  - [进程与线程的区别](#进程与线程的区别)
+
+## OSI七层与TCP/IP五层模型
+
+- OSI七层模型
+
+  ```txt
+  应用层
+  表示层
+  会话层
+  传输层
+  网络层
+  数据链路层
+  物理层
+  ```
+
+- TCP/IP五层模型
+
+  ```txt
+  应用层
+  传输层：TCP协议、UDP协议
+  网络层：IP协议、ICMP协议、ARP协议、RARP协议
+  数据链路层
+  物理层
+  ```
+
+## 应用层有哪些协议，哪些是TCP协议，哪些是UDP协议
+
+```txt
+基于TCP的应用层协议有：POP3、SMTP（简单邮件传输协议）、TELNET（远程登陆协议）、HTTP（超文本传输协议）、HTTPS（超文本传输安全协议）、FTP（文件传输协议）
+基于UDP的应用层协议：TFTP（简单文件传输协议）、RIP（路由信息协议）、DHCP（动态主机设置协议）、BOOTP（引导程序协议，DHCP的前身）、IGMP（Internet组管理协议）
+基于TCP和UDP协议：DNS（域名系统）、ECHO（回绕协议）
+```
 
 ## HTTP 状态码
 
@@ -421,3 +456,41 @@ expires:Fri, 15 May 2020 10:47:02 GMT
 3. 某些服务器不能精确的得到文件的最后修改时间。
 
 `Last-Modified` 与 `ETag` 是可以一起使用的，服务器会优先验证`ETag`，一致的情况下，才会继续比对 `Last-Modified`，最后才决定是否返回 304。
+
+## 进程与线程的区别
+
+```txt
+官网定义：
+进程是系统进行资源分配和调度的基本单位
+
+线程是操作系统能够进行运算调度的最小单位
+
+简单理解：
+进程：指在系统中正在运行的一个应用程序；程序一旦运行就是进程；进程——资源分配的最小单位。
+
+线程：系统分配处理器时间资源的基本单元，或者说进程之内独立执行的一个单元执行流。线程——程序执行的最小单位。
+
+
+借助阮一峰老师的解释
+1.计算机的核心是CPU，它承担了所有的计算任务。它就像一座工厂，时刻在运行。
+2.假定工厂的电力有限，一次只能供给一个车间使用。也就是说，一个车间开工的时候，其他车间都必须停工。背后的含义就是，单个CPU一次只能运行一个任务。
+3.进程就好比工厂的车间，它代表CPU所能处理的单个任务。任一时刻，CPU总是运行一个进程，其他进程处于非运行状态。
+4.一个车间里，可以有很多工人。他们协同完成一个任务。
+5.线程就好比车间里的工人。一个进程可以包括多个线程。
+6.车间的空间是工人们共享的，比如许多房间是每个工人都可以进出的。这象征一个进程的内存空间是共享的，每个线程都可以使用这些共享内存。
+7.可是，每间房间的大小不同，有些房间最多只能容纳一个人，比如厕所。里面有人的时候，其他人就不能进去了。
+  这代表一个线程使用某些共享内存时，其他线程必须等它结束，才能使用这一块内存。
+8.一个防止他人进入的简单方法，就是门口加一把锁。先到的人锁上门，后到的人看到上锁，就在门口排队，等锁打开再进去。
+  这就叫"互斥锁"（Mutual exclusion，缩写 Mutex），防止多个线程同时读写某一块内存区域。
+9.还有些房间，可以同时容纳n个人，比如厨房。也就是说，如果人数大于n，多出来的人只能在外面等着。这好比某些内存区域，只能供给固定数目的线程使用。
+10.这时的解决方法，就是在门口挂n把钥匙。进去的人就取一把钥匙，出来时再把钥匙挂回原处。后到的人发现钥匙架空了，就知道必须在门口排队等着了。
+  这种做法叫做"信号量"（Semaphore），用来保证多个线程不会互相冲突。
+
+操作系统的设计，因此可以归结为三点：
+
+（1）以多进程形式，允许多个任务同时运行；
+
+（2）以多线程形式，允许单个任务分成不同的部分运行；
+
+（3）提供协调机制，一方面防止进程之间和线程之间产生冲突，另一方面允许进程之间和线程之间共享资源。
+```
