--- a/01.浏览器/浏览器.md
+++ b/01.浏览器/浏览器.md
@@ -2,7 +2,10 @@
 
 - [浏览器](#浏览器)
   - [OSI七层与TCP/IP五层模型](#osi七层与tcpip五层模型)
-  - [应用层有哪些协议，哪些是TCP协议，哪些是UDP协议](#应用层有哪些协议哪些是tcp协议哪些是udp协议)
+  - [应用层的协议哪些是基于TCP协议的，哪些是基于UDP协议的](#应用层的协议哪些是基于tcp协议的哪些是基于udp协议的)
+    - [基于TCP协议的](#基于tcp协议的)
+    - [基于UDP协议的](#基于udp协议的)
+    - [基于TCP和UDP协议的](#基于tcp和udp协议的)
   - [HTTP 状态码](#http-状态码)
   - [HTTP 与 HTTPS 的区别](#http-与-https-的区别)
   - [HTTPS 协议的工作原理](#https-协议的工作原理)
@@ -51,20 +54,37 @@
 - TCP/IP五层模型
 
   ```txt
-  应用层
-  传输层：TCP协议、UDP协议
-  网络层：IP协议、ICMP协议、ARP协议、RARP协议
-  数据链路层
+  应用层：TFTP，HTTP，SNMP，FTP，SMTP，DNS，Telnet
+  传输层：TCP，UDP
+  网络层：IP，ICMP，RIP，OSPF，BGP，IGMP
+  数据链路层：SLIP，CSLIP，PPP，ARP，RARP，MTU
   物理层
   ```
 
-## 应用层有哪些协议，哪些是TCP协议，哪些是UDP协议
+## 应用层的协议哪些是基于TCP协议的，哪些是基于UDP协议的
 
-```txt
-基于TCP的应用层协议有：POP3、SMTP（简单邮件传输协议）、TELNET（远程登陆协议）、HTTP（超文本传输协议）、HTTPS（超文本传输安全协议）、FTP（文件传输协议）
-基于UDP的应用层协议：TFTP（简单文件传输协议）、RIP（路由信息协议）、DHCP（动态主机设置协议）、BOOTP（引导程序协议，DHCP的前身）、IGMP（Internet组管理协议）
-基于TCP和UDP协议：DNS（域名系统）、ECHO（回绕协议）
-```
+### 基于TCP协议的
+
+- FTP（文件传输协议）：定义了文件传输协议，使用21端口。
+- TELNET（远程登陆协议）：一种用于远程登陆的端口，使用23端口，用户可以以自己的身份远程连接到计算机上，可提供基于DOS模式下的通信服务。
+- SMTP（简单邮件传输协议）：邮件传送协议，用于发送邮件。服务器开放的是25号端口。
+- POP3（邮件读取协议）：它是和SMTP对应，POP3用于接收邮件。POP3协议所用的是110端口。
+- HTTP（超文本传输协议）：是从Web服务器传输超文本到本地浏览器的传送协议。
+- HTTPS（超文本传输安全协议）
+
+### 基于UDP协议的
+
+- TFTP（简单文件传输协议）：该协议在熟知端口69上使用UDP服务。
+- SNMP（简单网络管理协议）：使用161号端口，是用来管理网络设备的。由于网络设备很多，无连接的服务就体现出其优势。
+- BOOTP（引导程序协议，DHCP的前身）：应用于无盘设备
+- DHCP（动态主机配置协议）：是一个局域网的网络协议
+- RIP（路由信息协议）：基于距离矢量算法的路由协议，利用跳数来作为计量标准。
+- IGMP（Internet组管理协议）
+
+### 基于TCP和UDP协议的
+
+- DNS（域名系统）：DNS区域传输的时候使用TCP协议。域名解析时使用UDP协议。DNS用的是53号端口。
+- ECHO（回绕协议）
 
 ## HTTP 状态码
 
