--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -723,9 +723,10 @@
 5. 前端需不需要了解业务（开发就是半个产品经理）
 6. 说一说你的项目中批量关闭所有广告数据的逻辑
 7. 如果说关闭的广告有其他公司的一个平台呢
-8. 1-2年的职业规划
-9. 你对重复造轮子怎么看，因为我提到了想自己搭一个博客系统
-10. 反问
+8. 实习跟学校的生活对比有什么感受
+9. 1-2年的职业规划
+10. 你对重复造轮子怎么看，因为我提到了想自己搭一个博客系统
+11. 反问
 
 ## 上海东方财富 2020/8/21投递
 
