--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -206,7 +206,7 @@ function PriorityQueue() {
     // 2.获取传入元素应该在正确的位置
     if (this.isEmpty()) {
       items.push(queueElement);
-    } else {
+    } else { // 这里可以二分法优化一下，感兴趣的朋友自己加一下
       var added = false;
       for (var i = 0; i < items.length; i++) {
         // 注意: 我们这里是数字越小, 优先级越高
