Update priority queue method

--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -203,24 +203,33 @@ function PriorityQueue() {
     // 1.根据传入的元素, 创建新的QueueElement
     var queueElement = new QueueElement(element, priority);
 
-    // 2.获取传入元素应该在正确的位置
+    // 2.如果是空队列，直接放入
     if (this.isEmpty()) {
       items.push(queueElement);
-    } else { // 这里可以二分法优化一下，感兴趣的朋友自己加一下
-      var added = false;
-      for (var i = 0; i < items.length; i++) {
-        // 注意: 我们这里是数字越小, 优先级越高
-        if (queueElement.priority < items[i].priority) {
-          items.splice(i, 0, queueElement);
-          added = true;
-          break;
+      return;
+    }
+
+    // 3.获取传入元素应该在正确的位置
+    if (queueElement.priority < items[0].priority) {
+      // 3.1：如果传入元素权重最高（数字最小），放在队列第一位
+      items.unshift(queueElement);
+    } else if (queueElement.priority > items[items.length - 1].priority) {
+      // 3.2：如果传入元素权重最低（数字最大），放在队列最后一位
+      items.push(queueElement);
+    } else {
+      // 3.3：传入的元素权重处于中间位置，找到合适的位置并插入
+      var start = 0;
+      var end = items.length - 1;
+      while (start < end - 1) {
+        var middle = Math.floor((start + end) / 2);
+        var current = items[middle].priority;
+        if (current > queueElement.priority) {
+          end = middle;
+        } else if (current <= queueElement.priority) {
+          start = middle;
         }
       }
-
-      // 遍历完所有的元素, 优先级都大于新插入的元素时, 就插入到最后
-      if (!added) {
-        items.push(queueElement);
-      }
+      items.splice(start, 0, queueElement);
     }
   };
 
