--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -21,7 +21,7 @@
     - [三面 主管面 2020/9/9](#三面-主管面-202099)
   - [海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递](#海康威视-三个志愿杭州南京上海-2020821投递)
     - [一面 电话 2020/9/15](#一面-电话-2020915)
-    - [二面](#二面)
+    - [二面拒了](#二面拒了)
   - [恒生电子 杭州 2020/8/21投递](#恒生电子-杭州-2020821投递)
   - [上海触宝 2020/8/21投递](#上海触宝-2020821投递)
     - [一面 2020/9/12](#一面-2020912)
@@ -35,7 +35,9 @@
   - [shopee 2020/8/25投递](#shopee-2020825投递)
     - [一面 2020/9/11](#一面-2020911)
     - [二面 2020/9/18](#二面-2020918)
+    - [HR面 2020/9/21](#hr面-2020921)
   - [美团 到店事业群-广告事业部 2020/8/29投递](#美团-到店事业群-广告事业部-2020829投递)
+    - [北京的捞我面试，拒了](#北京的捞我面试拒了)
   - [网易互联网 网易严选/网易有道 2020/8/29投递](#网易互联网-网易严选网易有道-2020829投递)
     - [一面 2020/9/16](#一面-2020916)
   - [杭州滴滴 CTO线 2020/8/29投递（内推）](#杭州滴滴-cto线-2020829投递内推)
@@ -624,7 +626,7 @@
     - 流程 电话面+技术面
     - 业务 主要是B端的，具体部门进去安排
 
-### 二面
+### 二面拒了
 
 > 让在钉钉群里候着，结果候了两个小时，体验感太差，不面了
 
@@ -1004,9 +1006,13 @@
     - 那我问点能闲聊的吧，你在shopee呆了多久了。答：3年多了，前20名员工。我：元老级员工
     - 都说现在前端的技术发展非常快，你有什么可以推荐我去了解学习一下的吗？答：这你可就问对人了，然后给我讲了20min，很有深度值得思考
 
+### HR面 2020/9/21
+
 ## 美团 到店事业群-广告事业部 2020/8/29投递
 
 > 2020/9/6 笔试
+
+### 北京的捞我面试，拒了
 
 ## 网易互联网 网易严选/网易有道 2020/8/29投递
 
