feat: shopee HR面

--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -1008,6 +1008,17 @@
 
 ### HR面 2020/9/21
 
+1. 为什么实习没有转正
+2. 找工作的关注点
+3. offer做选择时候的会有一个优先级排序，说一说这个优先级
+4. 喜欢什么样的工作氛围
+5. 哪里人，独生子吗？
+6. 家里人对你未来找工作有什么样的意见
+7. 有拿到其他公司的offer吗
+8. 期望薪资
+9. 本科的专业排名，硕士的专业排名
+10. 两周内有结果，不论通过与否都会有消息
+
 ## 美团 到店事业群-广告事业部 2020/8/29投递
 
 > 2020/9/6 笔试
