--- a/09.面试复盘/Lee/秋招面试复盘.md
+++ b/09.面试复盘/Lee/秋招面试复盘.md
@@ -19,32 +19,33 @@
     - [一面 2020/9/9](#一面-202099-1)
     - [二面 2020/9/9](#二面-202099)
     - [三面 主管面 2020/9/9](#三面-主管面-202099)
-  - [海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递](#海康威视-三个志愿杭州南京上海-2020821投递)
-    - [一面 电话 2020/9/15](#一面-电话-2020915)
-    - [二面拒了](#二面拒了)
-  - [恒生电子 杭州 2020/8/21投递](#恒生电子-杭州-2020821投递)
   - [上海触宝 2020/8/21投递](#上海触宝-2020821投递)
     - [一面 2020/9/12](#一面-2020912)
     - [二面 2020/9/12](#二面-2020912)
     - [三面（sp面）](#三面sp面)
     - [HR面 2020/9/25](#hr面-2020925)
-  - [上海东方财富 2020/8/21投递](#上海东方财富-2020821投递)
-    - [一面 2020/9/14](#一面-2020914)
-    - [二面 HR面 2020/9/16](#二面-hr面-2020916)
-  - [南京焦点科技 2020/8/21投递](#南京焦点科技-2020821投递)
-    - [一面 2020/9/1](#一面-202091-1)
   - [shopee 2020/8/25投递](#shopee-2020825投递)
     - [一面 2020/9/11](#一面-2020911)
     - [二面 2020/9/18](#二面-2020918)
     - [HR面 2020/9/21](#hr面-2020921)
+  - [南京小米 2020/8/31（内推）](#南京小米-2020831内推)
+    - [一面 2020/9/14](#一面-2020914)
+    - [二面 2020/9/15](#二面-2020915)
+  - [海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递](#海康威视-三个志愿杭州南京上海-2020821投递)
+    - [一面 电话 2020/9/15](#一面-电话-2020915)
+    - [二面被鸽，拒了](#二面被鸽拒了)
+  - [恒生电子 杭州 2020/8/21投递](#恒生电子-杭州-2020821投递)
+    - [收到面试通知，拒了](#收到面试通知拒了)
+  - [上海东方财富 2020/8/21投递](#上海东方财富-2020821投递)
+    - [一面 2020/9/14](#一面-2020914-1)
+    - [二面 HR面 2020/9/16](#二面-hr面-2020916)
+  - [南京焦点科技 2020/8/21投递](#南京焦点科技-2020821投递)
+    - [一面 2020/9/1](#一面-202091-1)
   - [美团 到店事业群-广告事业部 2020/8/29投递](#美团-到店事业群-广告事业部-2020829投递)
     - [北京的捞我面试，拒了](#北京的捞我面试拒了)
   - [网易互联网 网易严选/网易有道 2020/8/29投递](#网易互联网-网易严选网易有道-2020829投递)
     - [一面 2020/9/16](#一面-2020916)
   - [杭州滴滴 CTO线 2020/8/29投递（内推）](#杭州滴滴-cto线-2020829投递内推)
-  - [南京小米 2020/8/31（内推）](#南京小米-2020831内推)
-    - [一面 2020/9/14](#一面-2020914-1)
-    - [二面 2020/9/15](#二面-2020915)
   - [百度(上海) 2020/9/3投递](#百度上海-202093投递)
   - [快手(上海) 2020/9/6投递](#快手上海-202096投递)
 
@@ -606,35 +607,6 @@
     - 面试官也是云服务部下面的智慧业务部
     - 部门业务，基本算互联网
 
-## 海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递
-
-> 2020/8/28 笔试
-
-### 一面 电话 2020/9/15
-
-1. 自我介绍
-2. 介绍项目，深挖项目，挖了20分钟！！！
-3. websocket有用到吗，没有，然后给我的项目提了个bug
-4. 详细问我一个项目的流程，需求分析，技术评审...
-5. 需求评审都有谁，技术评审用的啥...
-6. 遇到问题怎么解决，两天自己解决问题，两个小时问导师/主管解决，你选啥？what？？？
-7. 如果接口挂了，前端有做什么处理吗
-8. 设计模式了解哪些，项目中有用到么
-9. 怎么学习前端的，看过哪些书籍使用过哪些网站
-10. 说说vue你觉得哪里掌握的不错，哪些用的比较少
-11. 反问
-
-    - 流程 电话面+技术面
-    - 业务 主要是B端的，具体部门进去安排
-
-### 二面拒了
-
-> 让在钉钉群里候着，结果候了两个小时，体验感太差，不面了
-
-## 恒生电子 杭州 2020/8/21投递
-
-> 笔试时间 2020/9/18， 收到面试通知，拒了
-
 ## 上海触宝 2020/8/21投递
 
 > 笔试时间 2020/8/25
@@ -751,124 +723,6 @@
 14. 反问
 
     先发意向书，十月份才出薪资offer
-
-## 上海东方财富 2020/8/21投递
-
-> 2020/8/29 笔试
-
-### 一面 2020/9/14
-
-1. quertSelectorAll返回的是一个什么（NodeList对象）
-2. 冒泡的原理
-3. position值为absolute和fixed的区别
-4. 文本单行居中，多行居左
-
-    ```html
-    div {
-        margin: 0 auto;
-        display: flex;
-        justify-content: center;
-    }
-
-    <div>
-        标题内容，这里自己添加文本成多行，
-    </div>
-    ```
-
-5. 面向对象的特点，js是面向对象的吗
-
-    抽象、继承、多态
-
-6. 说一下js的继承
-7. 判断数组的方式
-8. 分析输出
-
-    ```js
-    var foo = {
-        bar: 1,
-        print: function() {
-            console.log(this.bar)
-        }
-    }
-    var print = foo.print;
-    print(); // undefined
-    ```
-
-9. forEach和map的区别
-10. Vue 双向数据绑定
-11. Vue key的作用
-12. proxy解决了什么问题
-13. git stash 是干嘛的
-
-    命令可用于临时保存和回复修改，可跨分支。
-
-14. git checkout有什么作用
-15. 手写代码
-
-    ```js
-    let data = [
-        {'math': 99, 'english': 98, 'chinese': 88},
-        {'math': 89, 'english': 88, 'chinese': 78},
-        {'math': 79, 'english': 78, 'chinese': 68}
-    ]
-
-    类似这样的一个数组，给定一个字段，按照其进行排序
-
-    function solution(data, param) {
-        return data.sort((a, b) => a[param] - b[param]);
-    }
-    ```
-
-16. 反问
-
-    - 部门情况: 证券事业部，主要是做东财APP模块的 React Native，偏移动端
-    - 前端规模 证券事业部30人
-    - 面试流程 总共三轮，hr面+高管面
-
-### 二面 HR面 2020/9/16
-
-1. 说说你的本科经历
-2. 为什么选择考研
-3. 你还有其他家的offer吗
-4. 你对于offer选择有什么想法
-5. 反问
-
-    - 流程 后续还有一轮技术面
-    - 业务 资讯类 代销 基金 证券 东财APP
-
-## 南京焦点科技 2020/8/21投递
-
-> 无笔试
-
-### 一面 2020/9/1
-
-1. 自我介绍
-2. html结构讲一下
-3. meta标签有哪些
-4. html语义化的作用
-5. css两栏布局
-6. 脱离文档流的的方式
-7. position的默认值（static）
-8. JS onload 和 DOMContentLoaded事件
-
-    - 当整个页面及所有依赖资源如样式表和图片都已完成加载时，将触发load事件。它与DOMContentLoaded不同，后者只要页面DOM加载完成就触发，无需等待依赖资源的加载。
-    - 当纯HTML被完全加载以及解析时，DOMContentLoaded 事件会被触发，而不必等待样式表，图片或者子框架完成加载。
-
-9. Vue 路由，监听的什么事件
-10. Vuex的底层是怎么实现的
-11. 一个 div 中有一个 image 标签，图片的高度是 500px, div 默认样式，则 div 的高度是多少
-12. Web图片格式你知道哪些
-13. 页面的优化方式
-14. 跨域的方式
-15. 前端攻击技术CSRF以及防御措施
-16. webpack有搭建过吗？遇到过什么问题没有
-17. 移动端、小程序有经验吗
-18. 你的下一步的学习计划是什么
-19. 反问
-
-    - 部门情况（跨境交易事业部）
-    - 面试流程 三轮（技术面 小leader 大leader）
-    - 对我的面试评价，还有哪方面需要加强的（虽然说面试问到问题可能很少会遇到，但是一个初级前端工程师进阶为中高级前端工程师的一个标准就是你是否掌握比较深的一些东西，比如为什么尤大大要开发一个vuex之类的）
 
 ## shopee 2020/8/25投递
 
@@ -1041,34 +895,6 @@
 9. 本科的专业排名，硕士的专业排名
 10. 两周内有结果，不论通过与否都会有消息
 
-## 美团 到店事业群-广告事业部 2020/8/29投递
-
-> 2020/9/6 笔试
-
-### 北京的捞我面试，拒了
-
-## 网易互联网 网易严选/网易有道 2020/8/29投递
-
-> 笔试 2020/9/12
-
-### 一面 2020/9/16
-
-1. 自我介绍，重点讲讲实习项目，以及难点
-2. 滚动条不兼容具体说说是怎么解决的
-3. 有把解决的方案共享到公司吗，有写过公用的组件么
-4. 项目优化
-5. vue3和vue2的区别
-6. webpack打包原理
-7. 项目用了哪些loader
-8. style-loader的处理过程
-9. 熟悉哪些前端的库
-10. 说说FastClick库的原理
-11. 写一下这个原理的伪代码 what？？？
-
-## 杭州滴滴 CTO线 2020/8/29投递（内推）
-
-> 笔试 2020/9/13
-
 ## 南京小米 2020/8/31（内推）
 
 > 2020/9/6 笔试
@@ -1133,8 +959,187 @@
 21. 你的优缺点
 22. 你的职业规划
 
+## 海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递
+
+> 2020/8/28 笔试
+
+### 一面 电话 2020/9/15
+
+1. 自我介绍
+2. 介绍项目，深挖项目，挖了20分钟！！！
+3. websocket有用到吗，没有，然后给我的项目提了个bug
+4. 详细问我一个项目的流程，需求分析，技术评审...
+5. 需求评审都有谁，技术评审用的啥...
+6. 遇到问题怎么解决，两天自己解决问题，两个小时问导师/主管解决，你选啥？what？？？
+7. 如果接口挂了，前端有做什么处理吗
+8. 设计模式了解哪些，项目中有用到么
+9. 怎么学习前端的，看过哪些书籍使用过哪些网站
+10. 说说vue你觉得哪里掌握的不错，哪些用的比较少
+11. 反问
+
+    - 流程 电话面+技术面
+    - 业务 主要是B端的，具体部门进去安排
+
+### 二面被鸽，拒了
+
+> 让在钉钉群里候着，结果候了两个小时，体验感太差，不面了
+
+## 恒生电子 杭州 2020/8/21投递
+
+> 笔试时间 2020/9/18
+
+### 收到面试通知，拒了
+
+## 上海东方财富 2020/8/21投递
+
+> 2020/8/29 笔试
+
+### 一面 2020/9/14
+
+1. quertSelectorAll返回的是一个什么（NodeList对象）
+2. 冒泡的原理
+3. position值为absolute和fixed的区别
+4. 文本单行居中，多行居左
+
+    ```html
+    div {
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+    }
+
+    <div>
+        标题内容，这里自己添加文本成多行，
+    </div>
+    ```
+
+5. 面向对象的特点，js是面向对象的吗
+
+    抽象、继承、多态
+
+6. 说一下js的继承
+7. 判断数组的方式
+8. 分析输出
+
+    ```js
+    var foo = {
+        bar: 1,
+        print: function() {
+            console.log(this.bar)
+        }
+    }
+    var print = foo.print;
+    print(); // undefined
+    ```
+
+9. forEach和map的区别
+10. Vue 双向数据绑定
+11. Vue key的作用
+12. proxy解决了什么问题
+13. git stash 是干嘛的
+
+    命令可用于临时保存和回复修改，可跨分支。
+
+14. git checkout有什么作用
+15. 手写代码
+
+    ```js
+    let data = [
+        {'math': 99, 'english': 98, 'chinese': 88},
+        {'math': 89, 'english': 88, 'chinese': 78},
+        {'math': 79, 'english': 78, 'chinese': 68}
+    ]
+
+    类似这样的一个数组，给定一个字段，按照其进行排序
+
+    function solution(data, param) {
+        return data.sort((a, b) => a[param] - b[param]);
+    }
+    ```
+
+16. 反问
+
+    - 部门情况: 证券事业部，主要是做东财APP模块的 React Native，偏移动端
+    - 前端规模 证券事业部30人
+    - 面试流程 总共三轮，hr面+高管面
+
+### 二面 HR面 2020/9/16
+
+1. 说说你的本科经历
+2. 为什么选择考研
+3. 你还有其他家的offer吗
+4. 你对于offer选择有什么想法
+5. 反问
+
+    - 流程 后续还有一轮技术面
+    - 业务 资讯类 代销 基金 证券 东财APP
+
+## 南京焦点科技 2020/8/21投递
+
+> 无笔试
+
+### 一面 2020/9/1
+
+1. 自我介绍
+2. html结构讲一下
+3. meta标签有哪些
+4. html语义化的作用
+5. css两栏布局
+6. 脱离文档流的的方式
+7. position的默认值（static）
+8. JS onload 和 DOMContentLoaded事件
+
+    - 当整个页面及所有依赖资源如样式表和图片都已完成加载时，将触发load事件。它与DOMContentLoaded不同，后者只要页面DOM加载完成就触发，无需等待依赖资源的加载。
+    - 当纯HTML被完全加载以及解析时，DOMContentLoaded 事件会被触发，而不必等待样式表，图片或者子框架完成加载。
+
+9. Vue 路由，监听的什么事件
+10. Vuex的底层是怎么实现的
+11. 一个 div 中有一个 image 标签，图片的高度是 500px, div 默认样式，则 div 的高度是多少
+12. Web图片格式你知道哪些
+13. 页面的优化方式
+14. 跨域的方式
+15. 前端攻击技术CSRF以及防御措施
+16. webpack有搭建过吗？遇到过什么问题没有
+17. 移动端、小程序有经验吗
+18. 你的下一步的学习计划是什么
+19. 反问
+
+    - 部门情况（跨境交易事业部）
+    - 面试流程 三轮（技术面 小leader 大leader）
+    - 对我的面试评价，还有哪方面需要加强的（虽然说面试问到问题可能很少会遇到，但是一个初级前端工程师进阶为中高级前端工程师的一个标准就是你是否掌握比较深的一些东西，比如为什么尤大大要开发一个vuex之类的）
+
+## 美团 到店事业群-广告事业部 2020/8/29投递
+
+> 2020/9/6 笔试
+
+### 北京的捞我面试，拒了
+
+## 网易互联网 网易严选/网易有道 2020/8/29投递
+
+> 笔试 2020/9/12
+
+### 一面 2020/9/16
+
+1. 自我介绍，重点讲讲实习项目，以及难点
+2. 滚动条不兼容具体说说是怎么解决的
+3. 有把解决的方案共享到公司吗，有写过公用的组件么
+4. 项目优化
+5. vue3和vue2的区别
+6. webpack打包原理
+7. 项目用了哪些loader
+8. style-loader的处理过程
+9. 熟悉哪些前端的库
+10. 说说FastClick库的原理
+11. 写一下这个原理的伪代码 what？？？
+
+## 杭州滴滴 CTO线 2020/8/29投递（内推）
+
+> 笔试 2020/9/13
+
 ## 百度(上海) 2020/9/3投递
 
 > 笔试 2020/9/14
 
 ## 快手(上海) 2020/9/6投递
+
+> 无笔试
