--- a/09.面试复盘/Lee/秋招面试复盘.md
+++ b/09.面试复盘/Lee/秋招面试复盘.md
@@ -41,13 +41,15 @@
     - [二面 HR面 2020/9/16](#二面-hr面-2020916)
   - [南京焦点科技 2020/8/21投递](#南京焦点科技-2020821投递)
     - [一面 2020/9/1](#一面-202091-1)
-  - [美团 到店事业群-广告事业部 2020/8/29投递](#美团-到店事业群-广告事业部-2020829投递)
-    - [北京的捞我面试，拒了](#北京的捞我面试拒了)
+    - [二面说好约我的，一直没约](#二面说好约我的一直没约)
   - [网易互联网 网易严选/网易有道 2020/8/29投递](#网易互联网-网易严选网易有道-2020829投递)
     - [一面 2020/9/16](#一面-2020916)
+  - [美团 到店事业群-广告事业部 2020/8/29投递](#美团-到店事业群-广告事业部-2020829投递)
+    - [北京的捞我面试，拒了](#北京的捞我面试拒了)
   - [杭州滴滴 CTO线 2020/8/29投递（内推）](#杭州滴滴-cto线-2020829投递内推)
   - [百度(上海) 2020/9/3投递](#百度上海-202093投递)
   - [快手(上海) 2020/9/6投递](#快手上海-202096投递)
+    - [已结束](#已结束)
 
 ## 上海腾讯 PCG 腾讯视频 2020/8/19投递
 
@@ -1108,11 +1110,7 @@
     - 面试流程 三轮（技术面 小leader 大leader）
     - 对我的面试评价，还有哪方面需要加强的（虽然说面试问到问题可能很少会遇到，但是一个初级前端工程师进阶为中高级前端工程师的一个标准就是你是否掌握比较深的一些东西，比如为什么尤大大要开发一个vuex之类的）
 
-## 美团 到店事业群-广告事业部 2020/8/29投递
-
-> 2020/9/6 笔试
-
-### 北京的捞我面试，拒了
+### 二面说好约我的，一直没约
 
 ## 网易互联网 网易严选/网易有道 2020/8/29投递
 
@@ -1132,6 +1130,12 @@
 10. 说说FastClick库的原理
 11. 写一下这个原理的伪代码 what？？？
 
+## 美团 到店事业群-广告事业部 2020/8/29投递
+
+> 2020/9/6 笔试
+
+### 北京的捞我面试，拒了
+
 ## 杭州滴滴 CTO线 2020/8/29投递（内推）
 
 > 笔试 2020/9/13
@@ -1143,3 +1147,5 @@
 ## 快手(上海) 2020/9/6投递
 
 > 无笔试
+
+### 已结束
