--- a/09.面试复盘/Lee/秋招面试复盘.md
+++ b/09.面试复盘/Lee/秋招面试复盘.md
@@ -51,6 +51,14 @@
   - [快手(上海) 2020/9/6投递](#快手上海-202096投递)
     - [已结束](#已结束)
 
+```txt
+总结一下自己的秋招，我个人觉得实习是挺重要的，对我的秋招帮助很大，其次一个是投递的时间也很重要，准备的越早，投递的越早，越容易上岸。
+我秋招面的第一家就是字节，四轮技术面到收到意向总共两周时间，可以说秋招直接就结束了，不出意外，后面面试的都没有什么压力，毕竟有一个保底。
+收到意向/offer包括：字节 京东 小米 shopee 触宝
+还在泡池子的：华为
+其余的不是挂了就是拒了
+```
+
 ## 上海腾讯 PCG 腾讯视频 2020/8/19投递
 
 > 笔试时间 2020/8/23 腾讯视频莫名挂了，被CSIG捞起来了，9.15提前批最后一天，9.16号状态变灰，刷了波KPI :）
