--- a/09.面试复盘/Lee/秋招面试复盘.md
+++ b/09.面试复盘/Lee/秋招面试复盘.md
@@ -5,11 +5,11 @@
 
 我秋招面的第一家就是字节，四轮技术面到收到意向总共两周时间，可以说秋招直接就结束了，不出意外，后面面试的都没有什么压力，毕竟有一个保底。
 
-收到意向/offer包括：字节 京东 小米 shopee 触宝
+收到意向/offer包括：字节 京东 小米 shopee 触宝，最后我也是不出意外的选择了字节跳动。
 
-还在泡池子的：华为
+其余的不是挂了就是拒了。
 
-其余的不是挂了就是拒了
+下面是按照投递顺序写的复盘记录，希望能够帮到新一届的学弟学妹们！
 ```
 
 - [秋招投递记录](#秋招投递记录)
@@ -60,7 +60,7 @@
     - [北京的捞我面试，拒了](#北京的捞我面试拒了)
   - [杭州滴滴 CTO线 2020/8/29投递（内推）](#杭州滴滴-cto线-2020829投递内推)
   - [百度(上海) 2020/9/3投递](#百度上海-202093投递)
-  - [约面试 2020/10/20](#约面试-20201020)
+    - [约面试 2020/10/20](#约面试-20201020)
   - [快手(上海) 2020/9/6投递](#快手上海-202096投递)
     - [已结束](#已结束)
 
@@ -1157,7 +1157,7 @@
 
 > 笔试 2020/9/14
 
-## 约面试 2020/10/20
+### 约面试 2020/10/20
 
 收到面试邀请的我直接傻了，我的笔试 0 分，居然还能收到面试（第三批），不出意外的话KPI，直接放弃面试。
 
