--- a/09.面试复盘/字节一面.md
+++ b/09.面试复盘/字节一面.md
@@ -1,4 +1,12 @@
-字节一面
+# WZT 的面试记录
+
+- [WZT 的面试记录](#wzt-的面试记录)
+  - [字节](#字节)
+    - [字节一面](#字节一面)
+
+## 字节
+
+### 字节一面
 
 ```js
 项目全程不问，面试官人很好，是本学校的很和善，不懂的会提醒。浏览器计算机的的知识浅层的答出来会深入问。
@@ -9,7 +17,7 @@
 5.CSS3的新特性
 6.CSS盒子模型.flex布局 用过哪些属性 且flex:1表示什么
 7.基本数据类型分为哪些
-8.type null等于什么
+8.typeof null等于什么
 9.ES6新特性
 10.for...of for...in的区别
 11.promise的API
@@ -18,4 +26,3 @@
 14.手撕深拷贝
 15.手撕自己写一个组件设计一个图片轮播Carousel组件
 ```
-
