feat:update docs

--- a/01.浏览器/浏览器.md
+++ b/01.浏览器/浏览器.md
@@ -130,10 +130,10 @@
 
 > 参考链接：[HTTP/2 相比 1.0 有哪些重大改进？](https://www.zhihu.com/question/34074946)
 
-1. 首部压缩
-2. 多路复用
-3. 二进制分帧
-4. 服务端推送
+1. 首部压缩:使用报头压缩，降低开销，对于相同的数据，不再通过每次请求和响应发送
+2. 多路复用:在一个连接里，客户端和浏览器都可以同时发送多个请求或回应，而且不用按照顺序
+3. 二进制分帧:消息由一个或多个帧组成。多个帧之间可以乱序发送
+4. 服务端推送:HTTP2引入服务器推送，允许服务端推送资源给客户端,服务器会顺便把一些客户端需要的资源一起推送到客户端
 
 ## TCP 和 UDP 之间的区别
 
