--- a/01.浏览器/浏览器.md
+++ b/01.浏览器/浏览器.md
@@ -7,11 +7,14 @@
     - [基于 UDP 协议的](#基于-udp-协议的)
     - [基于 TCP 和 UDP 协议的](#基于-tcp-和-udp-协议的)
   - [HTTP 状态码](#http-状态码)
+  - [HTTP1.0 和 HTTP1.1 和 HTTP2.0 的区别](#http10-和-http11-和-http20-的区别)
+    - [HTTP1.0 和 HTTP1.1](#http10-和-http11)
+    - [http2.0 与 http1.X 区别](#http20-与-http1x-区别)
   - [HTTP 与 HTTPS 的区别](#http-与-https-的区别)
   - [HTTPS 协议的工作原理](#https-协议的工作原理)
-  - [HTTP/2.0 特性](#http20-特性)
   - [TCP 和 UDP 之间的区别](#tcp-和-udp-之间的区别)
-  - [TCP 的三次握手和四次挥手](#tcp-的三次握手和四次挥手)
+  - [TCP 的三次握手](#tcp-的三次握手)
+  - [TCP 的四次挥手](#tcp-的四次挥手)
   - [对称加密和非对称加密的区别](#对称加密和非对称加密的区别)
   - [WebSocket 协议](#websocket-协议)
   - [什么是浏览器的同源政策](#什么是浏览器的同源政策)
@@ -96,20 +99,64 @@
    - 204 No Content 请求处理成功，但没有资源可返回
    - 206 Partial Content 请求资源的某一部分
 3. 3XX 重定向状态码
-   - 301 永久性重定向，表示请求的资源已被分配了新的 URI
-   - 302 临时性重定向，资源的 URL 已临时定位到其他位置
+   - 301 永久性重定向，表示请求的资源已被分配了新的 URI，比如启用了新域名、服务器切换到了新机房、网站目录层次重构，这些都算是“永久性”的改变。响应的 Location 首部中应该包含 资源现在所处的 URL
+   - 302 临时性重定向，资源的 URL 已临时定位到其他位置，客户端应该使用 Location 首部给出的 URL 来临时定位资源。将来的请求仍应使用老的 URL
    - 303 告诉客户端应该用另一个 URL 获取资源
    - 304 表示客户端发送附带条件的请求时，服务器端允许请求访问资源，但未满足条件的情况
 4. 4XX 客户端错误状态码
    - 400 表示请求报文中存在语法错误
-   - 401 未授权
-   - 403 服务器拒绝了请求
+   - 401 未授权，客户端没有带认证信息或者带了错误的认证信息, 这时客户端可以修改认证信息进行重试
+   - 403 服务器拒绝了请求，客户端带了正确的认证信息, 但服务器认为这个认证信息对应的用户是没有对应资源的访问权限的, 因此, 在向管理员获取相关权限之前, 是没有重试的必要的
    - 404 服务器无法找到所请求的 URL
 5. 5XX 服务器错误状态码
    - 500 内部服务器错误
    - 502 错误网关
    - 503 服务器暂时处于超负载或正在进行停机维护，现在无法处理请求。
    - 504 响应超时
+
+## HTTP1.0 和 HTTP1.1 和 HTTP2.0 的区别
+
+超文本传输协议（HTTP）用于浏览器与服务器之间的通信
+
+### HTTP1.0 和 HTTP1.1
+
+1. 缓存处理：
+
+- 1.0 的 header 中主要是通过 If-Modified-Since（比较资源的最后的更新时间是否一致），expires(资源的过期时间，取决于客户端本地时间)
+- 1.1 引入了其他的 If-Match(比较 ETag 是否一致), If-None-Match(比较 ETag 是否不一致), If-Unmodified-Since(比较资源最后的更新时间是否不一致), Entity tag(资源的匹配信息)
+
+2. 带宽优化
+
+- 1.0 存在一些浪费带宽的现象，例如客户端只需要某个对象的一部分，但是服务器将整个对象返回。
+- 1.1 则在请求头引入了 range 头域，它允许只请求资源的某个部分，即返回码是 206（Partial Content）
+
+3. Host 头处理
+
+- 1.0 中认为每个服务器都有一个唯一的 Ip，因此请求的 url 中并没有传递主机名（hostname）
+- 随着虚拟化技术的发展，一台物理机上可以有多个虚拟机，共享同一个 ip，1.1 中的请求消息和响应消息都支持 Host，请求消息中如果没有 Host 头域会报告一个错误（400 Bad Request）
+
+4. 长连接
+
+- http 是基于 TCP/IP 协议的，创建一个 TCP 连接是需要经过三次握手的,有一定的开销，如果每次通讯都要重新建立连接的话，对性能有影响。因此最好能维持一个长连接，可以用个长连接来发多个请求。
+- 1.0 中每次需要使用 keep-alive 参数来告知服务器端要建立一个长连接
+- 1.1 默认支持长连接，一定程度上弥补了 HTTP1.0 每次请求都要创建连接的缺点
+
+5. 新增状态码
+
+- 1.1 中新增了 24 个错误状态响应码，如 409（Conflict）表示请求的资源与资源的当前状态发生冲突；410（Gone）表示服务器上的某个资源被永久性的删除
+
+6. 新增请求方式
+
+- PUT，DELETE，OPTIONS 等
+
+### http2.0 与 http1.X 区别
+
+> 参考链接：[HTTP/2 相比 1.0 有哪些重大改进？](https://www.zhihu.com/question/34074946)
+
+1. header 压缩: header 头部带有大量的信息，而且每次使用报头压缩，降低开销，对于相同的 header 数据，不再通过每次请求和响应发送，差量更新 HTTP 头部，既避免了重复 header 的传输，又减小了需要传输的大小
+2. 多路复用:在一个连接里，客户端和浏览器都可以同时发送多个请求或回应，而且不用按照顺序
+3. 二进制分帧:消息由一个或多个帧组成。多个帧之间可以乱序发送
+4. 服务端推送:HTTP2 引入服务器推送，允许服务端推送资源给客户端,服务器会顺便把一些客户端需要的资源一起推送到客户端
 
 ## HTTP 与 HTTPS 的区别
 
@@ -119,21 +166,13 @@
 
 ## HTTPS 协议的工作原理
 
-1. 客户使用 HTTPS URL 访问服务器，则要求 web 服务器建立 SSL 链接。
-2. web 服务器接收到客户端的请求之后，会将网站的证书（证书中包含了公钥），返回给客户端。
-3. 客户端和 web 服务器端开始协商 SSL 链接的安全等级，也就是加密等级。
-4. 客户端浏览器通过双方协商一致的安全等级，建立会话密钥，然后通过网站的公钥来加密会话密钥，并传送给网站。
-5. web 服务器通过自己的私钥解密出会话密钥。
-6. web 服务器通过会话密钥加密与客户端之间进行通信。
-
-## HTTP/2.0 特性
-
-> 参考链接：[HTTP/2 相比 1.0 有哪些重大改进？](https://www.zhihu.com/question/34074946)
-
-1. 首部压缩:使用报头压缩，降低开销，对于相同的数据，不再通过每次请求和响应发送
-2. 多路复用:在一个连接里，客户端和浏览器都可以同时发送多个请求或回应，而且不用按照顺序
-3. 二进制分帧:消息由一个或多个帧组成。多个帧之间可以乱序发送
-4. 服务端推送:HTTP2 引入服务器推送，允许服务端推送资源给客户端,服务器会顺便把一些客户端需要的资源一起推送到客户端
+1. 客户使用 HTTPS URL 访问服务器，则要求 web 服务器建立 SSL 链接，客户端向服务器发送的报文包括客户端所支持的 ssl 版本，支持的加密算法以及密钥的长度。
+2. web 服务器接收到客户端的请求之后，也在报文中包含 SSL 版本以及加密组件，服务器的加密组件内容时从接收到的客户端加密组件内筛选出来的。
+3. 同时，web 服务器会将网站的 CA 证书（证书中包含了公钥），返回给客户端。
+4. 客户端通过 CA 证书来验证服务端的身份，公钥是否有效，比如颁发机构，过期时间，并随机生成对称加密的密钥 X 用公钥加密发给服务端。
+5. 服务器拿到客户端发过来的加密内容用自己的私钥解密获取到密钥 X。
+6. 双方都拿到了密钥 X，SSL 通道建立完成，通过密钥 X 加密信息来进行通信。
+   总结：HTTPS 协议使用了非对称加密 + 对称加密的方式，即利用了非对称加密安全性高的特点，又利用了对称加密速度快，效率高的好处
 
 ## TCP 和 UDP 之间的区别
 
@@ -145,7 +184,32 @@ TCP：传输控制协议 UDP：用户数据报协议
 4. TCP 只能是 1 对 1 的，UDP 支持 1 对 1,1 对多；
 5. TCP 的首部较大为 20 字节，而 UDP 只有 8 字节；
 
-## TCP 的三次握手和四次挥手
+## TCP 的三次握手
+
+https://juejin.cn/post/6844903834708344840
+1、第一次握手：客户端给服务端发一个 SYN 报文，并指明客户端的初始化序列号 SN(c)。此时客户端处于 SYN*Send 状态。
+2、第二次握手：服务器收到客户端的 SYN 报文之后，会以自己的 SYN 报文作为应答，并且也是指定了自己的初始化序列号 ISN(s)，同时会把客户端的 ISN + 1 作为 ACK 的值，表示自己已经收到了客户端的 SYN，此时服务器处于 \_SYN_REVD* 的状态。
+3、第三次握手：客户端收到 SYN 报文之后，会发送一个 ACK 报文，当然，也是一样把服务器的 ISN + 1 作为 ACK 的值，表示已经收到了服务端的 SYN 报文，此时客户端处于 establised 状态。
+4、服务器收到 ACK 报文之后，也处于 establised 状态，此时，双方以建立起了链接。
+
+- 第一次握手：客户端发送网络包，服务端收到了。这样服务端就能得出结论：客户端的发送能力、服务端的接收能力是正常的。
+
+- 第二次握手：服务端发包，客户端收到了。这样客户端就能得出结论：服务端的接收、发送能力，客户端的接收、发送能力是正常的。不过此时服务器并不能确认客户端的接收能力是否正常。
+
+- 第三次握手：客户端发包，服务端收到了。这样服务端就能得出结论：客户端的接收、发送能力正常，服务器自己的发送、接收能力也正常。
+
+- 如果没有第三次握手，就会出现一些丢包的情况，如果只握手 2 次，第二次握手时如果服务端发给客户端的确认报文段丢失，此时服务端已经准备好了收发数(可以理解服务端已经连接成功)据，而客户端一直没收到服务端的确认报文，所以客户端就不知道服务端是否已经准备好了(可以理解为客户端未连接成功)，这种情况下客户端不会给服务端发数据，也会忽略服务端发过来的数据。如果是三次握手，即便发生丢包也不会有问题，比如如果第三次握手客户端发的确认 ack 报文丢失，服务端在一段时间内没有收到确认 ack 报文的话就会重新进行第二次握手，也就是服务端会重发 SYN 报文段，客户端收到重发的报文段后会再次给服务端发送确认 ack 报文。
+
+## TCP 的四次挥手
+
+刚开始双方都处于 establised 状态，假如是客户端先发起关闭请求，则：
+1、第一次挥手：客户端发送一个 FIN 报文，报文中会指定一个序列号。此时客户端处于 FIN_WAIT1 状态。
+2、第二次握手：服务端收到 FIN 之后，会发送 ACK 报文，且把客户端的序列号值 + 1 作为 ACK 报文的序列号值，表明已经收到客户端的报文了，此时服务端处于 CLOSE_WAIT 状态。
+3、第三次挥手：如果服务端也想断开连接了，和客户端的第一次挥手一样，发给 FIN 报文，且指定一个序列号。此时服务端处于 LAST_ACK 的状态。
+4、第四次挥手：客户端收到 FIN 之后，一样发送一个 ACK 报文作为应答，且把服务端的序列号值 + 1 作为自己 ACK 报文的序列号值，此时客户端处于 TIME_WAIT 状态。需要过一阵子以确保服务端收到自己的 ACK 报文之后才会进入 CLOSED 状态
+5、服务端收到 ACK 报文之后，就处于关闭连接了，处于 CLOSED 状态。
+
+- 为什么客户端发送 ACK 之后不直接关闭，而是要等一阵子才关闭。这其中的原因就是，要确保服务器是否已经收到了我们的 ACK 报文，如果没有收到的话，服务器会重新发 FIN 报文给客户端，客户端再次收到 ACK 报文之后，就知道之前的 ACK 报文丢失了，然后再次发送 ACK 报文。
 
 ## 对称加密和非对称加密的区别
 
